interface.css
.rectangle {
    width: 99%;
    height: 99%;
    min-width: 1000px;
    min-height: 700px;
    border-radius: 1%;
    border: 3px solid black;
    /*background-color: lightgrey;*/
    background-image: url("nicholas-green-rAsESO5Puqw-unsplash.jpg");
    background-size: 100% 100%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    position: absolute;
}

.blur {
    width: 100%;
    height: 100%;
    min-width: 1000px;
    min-height: 700px;
    border-radius: 1%;
    backdrop-filter: blur(2px);
}

.scrollerGS {
    border:2px lightgrey;

    left: 12%;
    top: 6%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.container::-webkit-scrollbar {
    display: None;
}

.scrollerC {
    border:2px lightgrey;

    left: 12%;
    top: 9%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerK {
    border:2px lightgrey;

    left: 12%;
    top: 12%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerS {
    border:2px lightgrey;

    left: 12%;
    top: 15%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerH {
    border:2px lightgrey;

    left: 12%;
    top: 18%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerGS2 {
    border:2px lightgrey;

    left: 12%;
    top: 30%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerC2 {
    border:2px lightgrey;

    left: 12%;
    top: 33%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerK2 {
    border:2px lightgrey;

    left: 12%;
    top: 36%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerS2 {
    border:2px lightgrey;

    left: 12%;
    top: 39%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerH2 {
    border:2px lightgrey;

    left: 12%;
    top: 42%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerGS3 {
    border:2px lightgrey;

    left: 12%;
    top: 54%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerC3 {
    border:2px lightgrey;

    left: 12%;
    top: 57%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerK3 {
    border:2px lightgrey;

    left: 12%;
    top: 60%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerS3 {
    border:2px lightgrey;

    left: 12%;
    top: 63%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerH3 {
    border:2px lightgrey;

    left: 12%;
    top: 66%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerGS4 {
    border:2px lightgrey;

    left: 12%;
    top: 78%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerC4 {
    border:2px lightgrey;

    left: 12%;
    top: 81%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerK4 {
    border:2px lightgrey;

    left: 12%;
    top: 84%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerH4 {
    border:2px lightgrey;

    left: 12%;
    top: 90%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.scrollerS4 {
    border:2px lightgrey;

    left: 12%;
    top: 87%;
    position: absolute;

    /*IT CHANGES THE DIMENSIONS OF THE RED BOX*/
    width: 100%;
    height: 3%;

    overflow: auto;
}

.search-table{
    table-layout: fixed;
}

.search-table, td, th{
    /*QUESTO SERVE PER I BORDI DELLA TABELLA*/
    border-collapse:collapse;
    border:1px solid #777;

    /*PER CAMBIARE LE DIMENSIONI DELLA TABELLA*/
    width: 20px;
}

th {
    padding: 2px 2px;
    font-size:12px;
}

td {
    padding: 2px 2px;
    text-align: center;
}

th, td {
    min-width: 60px;
}

.box {
    width: 50px;
    height: 50px;
    border-radius: 5%;
    border: 3px solid black;
    background-color: whitesmoke;
    cursor: pointer;
    position: absolute;
}

.bolded { font-weight: bold; }

.tab {
    display: inline-block;
    margin-left: 40px;
}

.BPM {
    top: 20%;
    left: 70%;
    position: absolute;
    display: inline-block;
    z-index: 2;
}

.Complexity {
    top: 25%;
    left: 70%;
    position: absolute;
    z-index: 2;
}

@font-face {
    font-family: customFonts;
    src: url("LiquidCrystal-Normal.otf");
}

.TSTitle {
    top: 20%;
    left: 50%;
    position: absolute;
    font-family: customFonts;
}

.TimeSignatureNum {
    top: 25%;
    left: 50%;
    position: absolute;
    border-radius: 5%;
    display: inline-block;
    z-index: 2;
}

.TimeSignatureDen {
    top: 30%;
    left: 50%;
    position: absolute;
    border-radius: 5%;
    display: inline-block;
    z-index: 2;
}

.rotate1 {
    display: inline-block;
    white-space: nowrap;
    transform: translate(0, 100%) rotate(-90deg);
    transform-origin: 0 0;
    vertical-align: bottom;
    position: absolute;
    top: 8%;
    left: 3%;
}

.rotate1:before {
    content: "";
    float: left;
    margin-top: 100%;
}

.rotate1:after {
    content: "";
    display: inline-block;
}

.rotate2 {
    display: inline-block;
    white-space: nowrap;
    transform: translate(0, 100%) rotate(-90deg);
    transform-origin: 0 0;
    vertical-align: bottom;
    position: absolute;
    top: 32%;
    left: 3%;
}

.rotate2:before {
    content: "";
    float: left;
    margin-top: 100%;
}

.rotate2:after {
    content: "";
    display: inline-block;
}

.rotate3 {
    display: inline-block;
    white-space: nowrap;
    transform: translate(0, 100%) rotate(-90deg);
    transform-origin: 0 0;
    vertical-align: bottom;
    position: absolute;
    top: 55%;
    left: 3%;
}

.rotate3:before {
    content: "";
    float: left;
    margin-top: 100%;
}

.rotate3:after {
    content: "";
    display: inline-block;
}

.rotate4 {
    display: inline-block;
    white-space: nowrap;
    transform: translate(0, 100%) rotate(-90deg);
    transform-origin: 0 0;
    vertical-align: bottom;
    position: absolute;
    top: 80%;
    left: 3%;
}

.rotate4:before {
    content: "";
    float: left;
    margin-top: 100%;
}

.rotate4:after {
    content: "";
    display: inline-block;
}

#box-system {
    /*background-color: lightgrey;*/
    border-radius: 1%;
    position: absolute;
    width: 40%;
    height: 95%;
    left: 0%;
    top: 0%;
}

#measureOne {
    left: 8%;
    top: 12%;
    position: absolute;
}

#measureTwo {
    left: 8%;
    top: 37%;
    position: absolute;
}

#measureThree {
    left: 8%;
    top: 60%;
    position: absolute;
}

#measureFour {
    left: 8%;
    top: 85%;
    position: absolute;
}

#titleSub {
    top: 3%;
    left: 4%;
    position: absolute;
}

#start {
    position: absolute;
    right: 12.5%;
    top: 20%;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    cursor: pointer;
}

#refresh {
    position: absolute;
    right: 8%;
    top: 20%;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    cursor: pointer;
}

#title {
    position: absolute;
    right: 2%;
    top: 5%;
    transform: translate(-50%, -50%);
}

.green {
    background-color: #4c9a2a;
    animation-name: startBeat;
    animation-duration: 4s;
    animation-iteration-count: infinite;
}

@keyframes startBeat {
    0%   {background-color: #4c9a2a;}
    50%   {background-color: #1e5631;}
    100%   {background-color: #4c9a2a;}
}

.redOn {
    background-color: red;
    animation-name: none;
}

.STitle {
    left: 50%;
    bottom: 20%;
    transform: translate(-50%, 50%);
    color: white;
    position: absolute;
}

.slider {
    width: 100%; /* Full-width */
    height: 25px; /* Specified height */
    background: white;
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
    z-index: 1;
}

/* Mouse-over effects */
.slider:hover {
    opacity: 1; /* Fully shown on mouse-over */
}

.drumkit {
    border: 5px solid black;
    border-radius: 7%;
    position: absolute;
    width: 770px;
    height: 425px;
    bottom: 5%;
    right: 3%;
    z-index: 1;
    background-image: url("photo_2023-02-03_11-20-16.jpg");
    box-shadow: 10px 10px lightblue;
}

.drum {
    position: absolute;
    margin: 5px;
    cursor: pointer;
    /*z-index: 1;*/
    opacity: 0.3;
    border-radius: 50%;
    z-index: 2;
}

#kick {
    top: 30%;
    left: 43%;
    width: 173px;
    height: 140px;
    cursor: url(immagine_2023-02-04_111524358.png), pointer;
}

#cymbal {
    right: 7.5%;
    top: 9.5%;
    width: 187px;
    height: 129px;
    rotate: 21deg;
    cursor: url(immagine_2023-02-04_111501041.png), pointer;
}

#snare {
    left: 26.5%;
    top: 36%;
    width: 160px;
    height: 145px;
    cursor: url(immagine_2023-02-04_111501041.png), pointer;
}

#ghostsnare {
    left: 26.5%;
    top: 36%;
    width: 160px;
    height: 145px;
    opacity: 0;
    cursor: url(immagine_2023-02-04_111501041.png), pointer;
}

#hat {
    left: 0;
    top: 20%;
    width: 183px;
    height: 128px;
    rotate: -31deg;
    cursor: url(immagine_2023-02-04_111501041.png), pointer;
}

@keyframes drum-animation {
    from {
        opacity: 0.3;
    }
    to {
        opacity: 0.75;
        border: 2px solid black;
    }

}

@keyframes drum-animation-ghostsnare {
    from {
        opacity: 0;

    }
    to {
        opacity: 0.75;
        border: 2px solid black;
    }

}

@keyframes disappear {
    from {
        opacity: 0.3;
    }
    to {
        opacity: 0;
    }
}

